# wtop

./: .gitignore  Cargo.toml  config.toml
docs/: reads.md
src/: index.html  main.rs  server.rs  server_tests.rs  settings_loader.rs  system_observer.rs  system_status.rs
www/: index.html  test.html  updater.js
www/elements/: dial.js  example.js  updatable.js
www/view/: 1_simple.html  2_simpleUpdate.html  alt2.html
