[package]
name = "wtop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gethostname = "0.4.2"
actix-web = "4.3.1"
actix-files = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7.3"
rand = "0.8.5"
systemstat = "0.2.3"
chrono = { version = "0.4.11", features = ["serde"] }


[dev-dependencies]
assert_cmd = "2.0.11"
http = "0.2"
actix-rt = "2.8.0"
